crates/reinhardt-pages/tests/ui/component/fail/duplicate_loader_option.stderr
error: duplicate route option `loader`
 --> tests/ui/component/fail/duplicate_loader_option.rs:3:61
  |
3 | #[component("/projects/", name = "project", loader = first, loader = second)]
  |                                                             ^^^^^^

warning: unused imports: `Page` and `page`
 --> tests/ui/component/fail/duplicate_loader_option.rs:1:23
  |
1 | use reinhardt_pages::{Page, component, page};
  |                       ^^^^             ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
